fixing link in index to NC-bike-stats

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
         </div>
     </a>
-    <a href="http://ellencurrin.com/ncbikesafety/">
+    <a href="http://ellencurrin.github.io/NC-bike-stats/">
         <div class="col-md-4 card">
             <div class="outline" style="background-image:url('images/ncbikes.png');">
                 <h3>NC Bike Safety</h3>
